--- a/Cars/.classpath
+++ b/Cars/.classpath
@@ -58,5 +58,8 @@
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/tiles-core-2.0.6.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/tiles-jsp-2.0.6.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/xwork-core-2.3.15.3.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/displaytag-1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/displaytag-export-poi-1.2.jar"/>
+	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/displaytag-portlet-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
